--- a/frontend/stylesheets/temperature-logs.css.scss
+++ b/frontend/stylesheets/temperature-logs.css.scss
@@ -57,10 +57,10 @@
       stroke-width: 2px;
     }
   }
-  .loading-blue-container {
-    left: 450px !important;
-    top: 135px !important;
-  }
+  // .loading-blue-container {
+  //   left: 450px !important;
+  //   top: 135px !important;
+  // }
   .vertical-text {
     $margin: 230px !important;
     margin-top: $margin;
