fix well chooser stick to bottom

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -73,7 +73,8 @@ limitations under the License.
           </div>
           <div style="padding-left:20px; padding-right: 20px;">
             <!-- <div class="vertical-text SH">RELATIVE FLUORESCENCE UNITS</div> -->
-            <div class="chart-container" full-height offset="37 + 50 + 170 + 70 + 50 + 42 + 53" min="353">
+            <!-- <div class="chart-container" full-height offset="37 + 50 + 170 + 70 + 50 + 42 + 53" min="353">-->
+            <div class="chart-container" full-height offset="433" min="353">
               <div class="chart-error B1" ng-show="retrying && !fetching && error">
                 <strong class="text-black">Unable to load chart data</strong>
                 <p ng-bind="error"></p>
