align scroll/zoom bars

--- a/frontend/stylesheets/run-experiment.scss
+++ b/frontend/stylesheets/run-experiment.scss
@@ -24,4 +24,10 @@
       }
     }
   }
+  .zoom-container {
+    padding-left: 50px;
+  }
+  .ampli-scrollbar-container {
+    padding-right: 0;
+  }
 }
