can select wells using row/column

--- a/frontend/stylesheets/directives/amplification-well-switch.css.scss
+++ b/frontend/stylesheets/directives/amplification-well-switch.css.scss
@@ -20,9 +20,16 @@
     font-family: 'dinot-regular';
     font-size: 12px;
     text-align: center;
+
+    &.dragged {
+      background: lightblue;
+    }
   }
   .row-header {
     text-align: center;
+    &.dragged {
+      background: lightblue;
+    }
   }
   .well-switch {
     height: 60px;
