--- a/frontend/javascripts/app/views/directives/amplification-well-switch.html
+++ b/frontend/javascripts/app/views/directives/amplification-well-switch.html
@@ -20,22 +20,22 @@
   <table>
     <tbody>
       <tr>
-        <th ng-style="{width: row_header_width + 'px'}" class="col-header"></th>
-        <th ng-mousedown="dragStart()" ng-mouseup="dragStop()" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header">
-          {{col + 1}}
+        <th ng-mousedown="dragStart('corner', 0)" ng-style="{width: row_header_width + 'px'}" class="col-header"></th>
+        <th ng-mousedown="dragStart('column', col.index)" ng-mouseup="dragStop()" ng-mousemove="dragged('column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header" ng-class="col.dragged ? 'dragged' : '' ">
+          {{col.index + 1}}
         </th>
       </tr>
       <tr ng-repeat="row in rows">
-        <td class="row-header">
-          {{ row + 1 }}
+        <td class="row-header" ng-mousedown="dragStart('row', row.index)" ng-mousemove="dragged('row', row.index)" ng-mouseup="dragStop()" ng-class="row.dragged ? 'dragged' : '' ">
+          {{ row.index + 1 }}
         </td>
-        <td ng-repeat="col in columns" class="well-switch">
-          <div class="well-switch-container" ng-init="i = (row * columns.length) + col; button = buttons['well_' + i];" >
-            <div class="well-switch-bar" ng-style="getStyleForWellBar(row, col, button, i)">
+        <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart('well', i)" ng-mousemove="dragged('well', i)" ng-mouseup="dragStop()">
+          <div class="well-switch-container">
+            <div class="well-switch-bar" ng-style="getStyleForWellBar(row, col, well, i)">
             </div>
             <div class="ct-cq-container">
-              <div> Cq <strong class="value">{{ button.ct[0] }}</strong> </div>
-              <div> Cq <strong class="value">{{ button.ct[1] }}</strong> </div>
+              <div> Cq <strong class="value">{{ well.ct[0] }}</strong> </div>
+              <div> Cq <strong class="value">{{ well.ct[1] }}</strong> </div>
             </div>
           </div>
         </td>
