--- a/frontend/javascripts/app/views/directives/amplification-well-switch.html
+++ b/frontend/javascripts/app/views/directives/amplification-well-switch.html
@@ -21,12 +21,12 @@
     <tbody>
       <tr>
         <th ng-mousedown="dragStart('corner', 0)" ng-style="{width: row_header_width + 'px'}" class="col-header"></th>
-        <th ng-mousedown="dragStart('column', col.index)" ng-mouseup="dragStop()" ng-mousemove="dragged('column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header" ng-class="col.dragged ? 'dragged' : '' ">
+        <th ng-mousedown="dragStart('column', col.index)" ng-mouseup="dragStop()" ng-mousemove="dragged('column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header" ng-class="col.selected ? 'dragged' : '' ">
           {{col.index + 1}}
         </th>
       </tr>
       <tr ng-repeat="row in rows">
-        <td class="row-header" ng-mousedown="dragStart('row', row.index)" ng-mousemove="dragged('row', row.index)" ng-mouseup="dragStop()" ng-class="row.dragged ? 'dragged' : '' ">
+        <td class="row-header" ng-mousedown="dragStart('row', row.index)" ng-mousemove="dragged('row', row.index)" ng-mouseup="dragStop()" ng-class="row.selected ? 'dragged' : '' ">
           {{ row.index + 1 }}
         </td>
         <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart('well', i)" ng-mousemove="dragged('well', i)" ng-mouseup="dragStop()">
