--- a/frontend/javascripts/app/views/directives/amplification-well-switch.html
+++ b/frontend/javascripts/app/views/directives/amplification-well-switch.html
@@ -29,8 +29,8 @@
         <td class="row-header" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event)" ng-class="{dragged: row.selected}">
           {{ row.index + 1 }}
         </td>
-        <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event)" ng-class="{selected: well.selected}" ng-style="getWellStyle(row, col, well, i)">
-          <div class="well-switch-container">
+        <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event)" ng-class="{selected: well.selected, active: well.active}" ng-style="getWellStyle(row, col, well, i)">
+          <div class="well-switch-container" ng-style="getWellContainerStyle(row, col, well, i)">
             <div class="well-switch-bar-container">
               <div class="well-switch-bar" ng-style="getStyleForWellBar(row, col, well, i)">
               </div>
