display color by

--- a/frontend/javascripts/app/views/directives/amplification-well-switch.html
+++ b/frontend/javascripts/app/views/directives/amplification-well-switch.html
@@ -36,8 +36,8 @@
               </div>
             </div>
             <div class="ct-cq-container">
-              <div> Cq <strong class="value">{{ well.ct[0] }}</strong> </div>
-              <div> Cq <strong class="value">{{ well.ct[1] }}</strong> </div>
+              <div> Cq <strong class="value">{{ displayCt(well.ct[0]) }}</strong> </div>
+              <div> Cq <strong class="value">{{ displayCt(well.ct[1]) }}</strong> </div>
             </div>
           </div>
         </td>
