--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -41,11 +41,7 @@ limitations under the License.
         </div>
         <div style="padding-top:70px;">
           <div>
-            <!-- <div class="vertical-text SH">
-              <span ng-show="curve_type === 'derivative'">DERIVATIVE REPORTER</span>
-              <span ng-show="curve_type === 'normalized'">NORMALIZED REPORTER</span>
-            </div> -->
-            <div class="chart-container" full-height offset="486" min="300">
+            <div class="chart-container" full-height offset="450" min="336">
               <div class="chart-error B1" ng-show="error">
                 <strong class="text-black">Unable to load chart data</strong>
                 <p ng-bind="error"></p>
@@ -75,7 +71,7 @@ limitations under the License.
               </div>
             </div>
           </div>
-          <div class="choose-chart">
+          <div class="choose-chart" style="margin-left: -20px; margin-right: -20px; margin-top: 30px;">
             <amplification-well-switch ng-model="wellButtons" color-by="color_by" button-labels-num="1" label-unit="'Tm'" chart-type="melt-curve"></amplification-well-switch>
           </div>
         </div>
