fix charts routing

--- a/ng2/src/app/dashboard/charts/charts.component.html
+++ b/ng2/src/app/dashboard/charts/charts.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="charts-header">
-    <div chai-header-status experiment-id="1">
+    <div chai-header-status [experiment-id]="experimentId">
 
     </div>
   </div>
