--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -2,6 +2,15 @@
   <div class="exp-name">
     {{ experiment? experiment.name : 'Loading...' }}
   </div>
+<!--experiment valid, lid is close-->
+  <div class="status-indicator" *ngIf="experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && !statusData.optics.lid_open">
+    <div class="message">
+      <span class="message-text"></span>
+    </div>
+    <a class="button" *ngIf="!confirmStart" (click)="confirmStart = true">START EXPERIMENT</a>
+    <a class="button" *ngIf="confirmStart">CONFIRM START</a>
+  </div>
+
   <!--experiment invalid, lid is open-->
   <div class="status-indicator" *ngIf="experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && statusData.optics.lid_open">
     <div class="message">
