--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -8,7 +8,7 @@
       <span class="message-text"></span>
     </div>
     <a class="button" *ngIf="!confirmStart" (click)="confirmStart = true">START EXPERIMENT</a>
-    <a class="button" *ngIf="confirmStart">CONFIRM START</a>
+    <a class="button" *ngIf="confirmStart" (click)="startExperiment()">CONFIRM START</a>
   </div>
 
   <!--experiment invalid, lid is open-->
