header status - show remaning time

--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -2,11 +2,12 @@
   <div class="exp-name">
     {{ experiment? experiment.name : 'Loading...' }}
   </div>
-<!--experiment valid, lid is close-->
+  <!--experiment valid, lid is close-->
   <div class="status-indicator" *ngIf="!!state && experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && !statusData.optics.lid_open">
     <div class="message">
       <span class="message-text"></span>
     </div>
+    {{ state }}
     <a class="button" *ngIf="!confirmStart" (click)="confirmStart = true">START EXPERIMENT</a>
     <a class="button" *ngIf="confirmStart" (click)="startExperiment()">CONFIRM START</a>
   </div>
@@ -19,13 +20,13 @@
     <a class="button disabled">BEGIN EXPERIMENT</a>
   </div>
   <!--experiment completed successfully-->
-  <div class="status-indicator" *ngIf="!!state && experiment && experiment.completed_at && !(state !== 'idle' && isCurrentExperiment())">
+  <div class="status-indicator" *ngIf="!!state && experiment && experiment.completed_at && experiment.completion_status==='success' && !(state !== 'idle' && isCurrentExperiment())">
     <div class="message">
       COMPLETED
     </div>
   </div>
   <!--experiment failed-->
-  <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && !(state !== 'idle' && isCurrentExperiment()))">
+  <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && experiment.completion_status !=='success' && !(state !== 'idle' && isCurrentExperiment()))">
     <div class="message">
       <span class="failed">FAILED</span>
       <span class="message-text" *ngIf="experiment.completion_status === 'aborted'">
@@ -47,6 +48,7 @@
       </span>
     </div>
   </div>
+  <!--another experiment is running -->
   <div class="status-indicator" *ngIf="!!state && experiment && (!experiment.started_at && !experiment.completed_at && state !== 'idle' && !isCurrentExperiment())">
     <div class="message">
       <span class="message-text" *ngIf="!analyzed">
@@ -57,4 +59,23 @@
       </a>
     </div>
   </div>
+  <!--experiment is lid heating-->
+  <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && state === 'lid_heating' && isCurrentExperiment())">
+    <div class="message">
+      <div class="message-text">
+        <span>IN PROGRESS...</span>
+        <strong>ESTIMATING TIME REMAINING</strong>
+      </div>
+    </div>
+  </div>
+  <!--experiment is running-->
+  <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && state === 'running' && isCurrentExperiment())">
+    <div class="message">
+      <div class="message-text">
+        <span>IN PROGRESS...</span>
+        <strong>{{ remainingTime | hrMinSec  }}</strong>
+      </div>
+    </div>
+  </div>
+
 </div>
