header status - vertically align texts

--- a/ng2/src/app/shared/directives/header-status/header-status.component.scss
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.scss
@@ -20,10 +20,13 @@
 
   .header-right-container {
     float: left;
+    line-height: 50px;
 
     .exp-name {
       float: left;
       width: 50%;
+      padding-left: 15px;
+      font-size: 16px;
     }
 
     .status-indicator {
