--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -5,7 +5,7 @@
     <div class="menu-bar"></div>
   </div>
   <div class="header-right-container clearfix" chai-full-width offset="50">
-    <div class="exp-name">
+    <div class="exp-name x">
       {{ experiment? experiment.name : 'Loading...' }}
     </div>
     <!--experiment valid, lid is close-->
