display gradient bg, todo: tests

--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -5,81 +5,85 @@
     <div class="menu-bar"></div>
   </div>
   <div class="header-right-container clearfix" chai-full-width offset="50">
-    <div class="exp-name x">
-      {{ experiment? experiment.name : 'Loading...' }}
-    </div>
-    <!--experiment valid, lid is close-->
-    <div class="status-indicator" *ngIf="!!state && experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && !statusData.optics.lid_open">
-      <div class="message">
-        <span class="message-text"></span>
+    <div class="bg-placeholder clearfix" [attr.style]="getStyles()">
+      <div id="test"></div>
+      <div class="exp-name x">
+        <!--{{ stringify(getStyles()) }}-->
+        {{ experiment? experiment.name : 'Loading...' }}
       </div>
-      {{ state }}
-      <a class="button" *ngIf="!confirmStart" (click)="confirmStart = true">START EXPERIMENT</a>
-      <a class="button" *ngIf="confirmStart" (click)="startExperiment()">CONFIRM START</a>
-    </div>
+      <!--experiment valid, lid is close-->
+      <div class="status-indicator" *ngIf="!!state && experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && !statusData.optics.lid_open">
+        <div class="message">
+          <span class="message-text"></span>
+        </div>
+        {{ state }}
+        <a class="button" *ngIf="!confirmStart" (click)="confirmStart = true">START EXPERIMENT</a>
+        <a class="button" *ngIf="confirmStart" (click)="startExperiment()">CONFIRM START</a>
+      </div>
 
-    <!--experiment invalid, lid is open-->
-    <div class="status-indicator" *ngIf="!!state && experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && statusData.optics.lid_open">
-      <div class="message">
-        <span class="message-text">LID IS OPEN</span>
+      <!--experiment invalid, lid is open-->
+      <div class="status-indicator" *ngIf="!!state && experiment && !experiment.started_at && !experiment.completed_at && state==='idle' && statusData.optics.lid_open">
+        <div class="message">
+          <span class="message-text">LID IS OPEN</span>
+        </div>
+        <a class="button disabled">BEGIN EXPERIMENT</a>
       </div>
-      <a class="button disabled">BEGIN EXPERIMENT</a>
-    </div>
-    <!--experiment completed successfully-->
-    <div class="status-indicator" *ngIf="!!state && experiment && experiment.completed_at && experiment.completion_status==='success' && !(state !== 'idle' && isCurrentExperiment())">
-      <div class="message">
-        COMPLETED
-      </div>
-    </div>
-    <!--experiment failed-->
-    <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && experiment.completion_status !=='success' && !(state !== 'idle' && isCurrentExperiment()))">
-      <div class="message">
-        <span class="failed">FAILED</span>
-        <span class="message-text" *ngIf="experiment.completion_status === 'aborted'">
-          USER CANCELLED
-        </span>
-        <span class="message-text" *ngIf="experiment.completion_status !== 'aborted'">
-          AN ERROR OCCURED
-        </span>
-      </div>
-    </div>
-    <!--holding stage-->
-    <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && experiment.completed_at && state !== 'idle' && isCurrentExperiment())">
-      <div class="message">
-        <span class="message-text" *ngIf="!analyzed">
-          Analyzing... Holding Temperature of {{ statusData.heat_block.temperature.toFixed(1)  }}
-        </span>
-        <span class="message-text" *ngIf="analyzed">
-          Experiment Complete, Holding Temperature of {{ statusData.heat_block.temperature.toFixed(1)  }}
-        </span>
-      </div>
-    </div>
-    <!--another experiment is running -->
-    <div class="status-indicator" *ngIf="!!state && experiment && (!experiment.started_at && !experiment.completed_at && state !== 'idle' && !isCurrentExperiment())">
-      <div class="message">
-        <span class="message-text" *ngIf="!analyzed">
-          ANOTHER EXPERIMENT IS RUNNING
-        </span>
-        <a class="button">
-          VIEW NOW
-        </a>
-      </div>
-    </div>
-    <!--experiment is lid heating-->
-    <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && state === 'lid_heating' && isCurrentExperiment())">
-      <div class="message">
-        <div class="message-text">
-          <span>IN PROGRESS...</span>
-          <strong>ESTIMATING TIME REMAINING</strong>
+      <!--experiment completed successfully-->
+      <div class="status-indicator" *ngIf="!!state && experiment && experiment.completed_at && experiment.completion_status==='success' && !(state !== 'idle' && isCurrentExperiment())">
+        <div class="message">
+          COMPLETED
         </div>
       </div>
-    </div>
-    <!--experiment is running-->
-    <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && state === 'running' && isCurrentExperiment())">
-      <div class="message">
-        <div class="message-text">
-          <span>IN PROGRESS...</span>
-          <strong>{{ remainingTime | hrMinSec  }}</strong>
+      <!--experiment failed-->
+      <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && experiment.completion_status !=='success' && !(state !== 'idle' && isCurrentExperiment()))">
+        <div class="message">
+          <span class="failed">FAILED</span>
+          <span class="message-text" *ngIf="experiment.completion_status === 'aborted'">
+            USER CANCELLED
+          </span>
+          <span class="message-text" *ngIf="experiment.completion_status !== 'aborted'">
+            AN ERROR OCCURED
+          </span>
+        </div>
+      </div>
+      <!--holding stage-->
+      <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && experiment.completed_at && state !== 'idle' && isCurrentExperiment())">
+        <div class="message">
+          <span class="message-text" *ngIf="!analyzed">
+            Analyzing... Holding Temperature of {{ statusData.heat_block.temperature.toFixed(1)  }}
+          </span>
+          <span class="message-text" *ngIf="analyzed">
+            Experiment Complete, Holding Temperature of {{ statusData.heat_block.temperature.toFixed(1)  }}
+          </span>
+        </div>
+      </div>
+      <!--another experiment is running -->
+      <div class="status-indicator" *ngIf="!!state && experiment && (!experiment.started_at && !experiment.completed_at && state !== 'idle' && !isCurrentExperiment())">
+        <div class="message">
+          <span class="message-text" *ngIf="!analyzed">
+            ANOTHER EXPERIMENT IS RUNNING
+          </span>
+          <a class="button">
+            VIEW NOW
+          </a>
+        </div>
+      </div>
+      <!--experiment is lid heating-->
+      <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && state === 'lid_heating' && isCurrentExperiment())">
+        <div class="message">
+          <div class="message-text">
+            <span>IN PROGRESS...</span>
+            <strong>ESTIMATING TIME REMAINING</strong>
+          </div>
+        </div>
+      </div>
+      <!--experiment is running-->
+      <div class="status-indicator" *ngIf="!!state && experiment && (experiment.started_at && !experiment.completed_at && state === 'running' && isCurrentExperiment())">
+        <div class="message">
+          <div class="message-text">
+            <span>IN PROGRESS...</span>
+            <strong>{{ remainingTime | hrMinSec  }}</strong>
+          </div>
         </div>
       </div>
     </div>
