--- a/ng2/src/app/shared/directives/header-status/header-status.component.scss
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.scss
@@ -22,6 +22,10 @@
     float: left;
     line-height: 50px;
 
+    .bg-placeholder {
+      width: 100%;
+    }
+
     .exp-name {
       float: left;
       width: 50%;
