--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -5,7 +5,7 @@
     <div class="menu-bar"></div>
   </div>
   <div class="header-right-container clearfix" chai-full-width offset="50">
-    <div class="bg-placeholder clearfix" [attr.style]="getStyles()">
+    <div class="bg-placeholder clearfix" [attr.style]="getBackgroundStyle()" [ngClass]="{completed: experiment && ((!(status !=='idle' && isCurrentExperiment()) && experiment.completed_at) || experiment.started_at && state === 'idle')}">
       <div class="exp-name x">
         {{ experiment? experiment.name : 'Loading...' }}
       </div>
