header status - fix background color when experiment is running

--- a/ng2/src/app/shared/directives/header-status/header-status.component.scss
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.scss
@@ -4,10 +4,10 @@
 
   .menu-dropdown {
     float: left;
-    background: #ddd;
-    width: 50px;
-    height: 50px;
-    padding: 10px;
+    background: #fff;
+    width: 70px;
+    height: 70px;
+    padding: 20px;
 
     .menu-bar {
       width: 30px;
@@ -20,7 +20,7 @@
 
   .header-right-container {
     float: left;
-    line-height: 50px;
+    line-height: 70px;
     color: #fff;
     background: #333;
 
