header status - remaining text

--- a/ng2/src/app/shared/directives/header-status/header-status.component.html
+++ b/ng2/src/app/shared/directives/header-status/header-status.component.html
@@ -80,7 +80,7 @@
         <div class="message">
           <div class="message-text">
             <span>IN PROGRESS...</span>
-            <strong>{{ remainingTime | hrMinSec  }}</strong>
+            <strong>{{ remainingTime | hrMinSec  }} Remaining</strong>
           </div>
         </div>
       </div>
